ASC Prod BAckup/ASC Prod/force-app/main/default/objects/RD_Portfolio__c/RD_Portfolio__c.object-meta.xml
<CustomObject>
    <description>This is a RD Portfolio Custom Object</description>
    <label>RD Portfolio (OLD)</label>
    <nameField>
        <label>RD Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD Portfolios (OLD)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>