ASC Prod BAckup/ASC Prod/force-app/main/default/objects/RD_Portfolio__c/fields/AOP_Category__c.field-meta.xml
<CustomField>
    <fullName>AOP_Category__c</fullName>
    <label>AOP Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Base</fullName>
                <default>true</default>
                <label>Base</label>
            </value>
            <value>
                <fullName>Ambition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>