ASC Prod BAckup/ASC Prod/force-app/main/default/objects/RD_Portfolio__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <description>What application is the product used in</description>
    <label>Application</label>
    <type>TextArea</type>
</CustomField>