ASC Prod BAckup/ASC Prod/force-app/main/default/objects/RD_Portfolio__c/fields/Business_Driver__c.field-meta.xml
<CustomField>
    <fullName>Business_Driver__c</fullName>
    <description>What is the business driver for the project? Customer request or Market Driven.</description>
    <label>Business Driver</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Market</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>