ASC Prod BAckup/ASC Prod/force-app/main/default/objects/RD_Portfolio__c/fields/CL__c.field-meta.xml
<CustomField>
    <fullName>CL__c</fullName>
    <inlineHelpText>Commercial Lead</inlineHelpText>
    <label>CL</label>
    <length>2</length>
    <type>Text</type>
</CustomField>