ASC Prod BAckup/ASC Prod/force-app/main/default/objects/RD_Portfolio__c/fields/Customer_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Requested_Date__c</fullName>
    <description>What is the date the customer has requested completion of the project or delivery of the first sample?</description>
    <label>Customer Requested Date</label>
    <type>Date</type>
</CustomField>