ASC Prod BAckup/ASC Prod/force-app/main/default/objects/RD_Portfolio__c/fields/Customers__c.field-meta.xml
<CustomField>
    <fullName>Customers__c</fullName>
    <description>Who are the lead customers for this project?</description>
    <label>Customers</label>
    <type>TextArea</type>
</CustomField>