ASC Prod BAckup/ASC Prod/force-app/main/default/objects/RD_Portfolio__c/fields/First_Commercial_Sale__c.field-meta.xml
<CustomField>
    <fullName>First_Commercial_Sale__c</fullName>
    <description>Year of First Commercial Sale</description>
    <label>First Commercial Sale</label>
    <length>4</length>
    <type>Text</type>
</CustomField>