ASC Prod BAckup/ASC Prod/force-app/main/default/objects/RD_Portfolio__c/fields/Lead_Chemist__c.field-meta.xml
<CustomField>
    <fullName>Lead_Chemist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Chemist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RD_Portfolio</relationshipName>
    <type>Lookup</type>
</CustomField>