ASC Prod BAckup/ASC Prod/force-app/main/default/objects/RD_Portfolio__c/fields/Next_Gate_Review__c.field-meta.xml
<CustomField>
    <fullName>Next_Gate_Review__c</fullName>
    <description>Date for next gate review</description>
    <label>Next Gate Review</label>
    <type>Date</type>
</CustomField>