ASC Prod BAckup/ASC Prod/force-app/main/default/objects/RD_Portfolio__c/fields/OP__c.field-meta.xml
<CustomField>
    <fullName>OP__c</fullName>
    <inlineHelpText>Operations Lead</inlineHelpText>
    <label>OP</label>
    <length>2</length>
    <type>Text</type>
</CustomField>