ASC Prod BAckup/ASC Prod/force-app/main/default/objects/RD_Portfolio__c/fields/Open_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Open_Milestone__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Open Milestone</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>