ASC Prod BAckup/ASC Prod/force-app/main/default/objects/RD_Portfolio__c/fields/Plan_Status_RD__c.field-meta.xml
<CustomField>
    <fullName>Plan_Status_RD__c</fullName>
    <description>Flag if the RD project was included in the current years AOP.</description>
    <label>Plan Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In AOP</fullName>
            </value>
            <value>
                <fullName>Upside</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>