ASC Prod BAckup/ASC Prod/force-app/main/default/objects/RD_Portfolio__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <label>Platform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Electronics &amp; Energy Transition</fullName>
            </value>
            <value>
                <fullName>GMP &amp; Intermediates</fullName>
            </value>
            <value>
                <fullName>Specialty Reagents &amp; Application Development</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>