ASC Prod BAckup/ASC Prod/force-app/main/default/objects/RD_Portfolio__c/fields/PM__c.field-meta.xml
<CustomField>
    <fullName>PM__c</fullName>
    <inlineHelpText>Product Manager</inlineHelpText>
    <label>PM</label>
    <length>2</length>
    <type>Text</type>
</CustomField>