ASC Prod BAckup/ASC Prod/force-app/main/default/objects/RD_Portfolio__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A - High Priority</fullName>
                <default>true</default>
                <label>A - High Priority</label>
            </value>
            <value>
                <fullName>B - Low Priority</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>