ASC Prod BAckup/ASC Prod/force-app/main/default/objects/RD_Portfolio__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <label>Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advanced Electrolytes</fullName>
            </value>
            <value>
                <fullName>Alcoholates Extensions</fullName>
            </value>
            <value>
                <fullName>Alkyl Lithiums</fullName>
            </value>
            <value>
                <fullName>Applications Development</fullName>
            </value>
            <value>
                <fullName>Boranes Extensions</fullName>
            </value>
            <value>
                <fullName>Deuterium Reagents</fullName>
            </value>
            <value>
                <fullName>Emerging Pharma</fullName>
            </value>
            <value>
                <fullName>Enabling Ligands</fullName>
            </value>
            <value>
                <fullName>Generics API</fullName>
                <label>Generic API</label>
            </value>
            <value>
                <fullName>GMP INT &amp; Reagents</fullName>
            </value>
            <value>
                <fullName>Lucky Strikes</fullName>
            </value>
            <value>
                <fullName>Organometallic Precursors</fullName>
            </value>
            <value>
                <fullName>Product Improvement</fullName>
            </value>
            <value>
                <fullName>Spec. Intermediates</fullName>
            </value>
            <value>
                <fullName>Analytical Development</fullName>
            </value>
            <value>
                <fullName>Electronic Gases</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>