ASC Prod BAckup/ASC Prod/force-app/main/default/objects/RD_Portfolio__c/fields/Project_Health_Flag__c.field-meta.xml
<CustomField>
    <fullName>Project_Health_Flag__c</fullName>
    <formula>IF(
   AND(
       OR(
         ISPICKVAL(Project_Status__c, &apos;Active&apos;),
         ISPICKVAL(Project_Status__c, &apos;On-Hold&apos;)
       ),
        Open_Milestone__c &gt; 0,
        Overdue_Milestone__c  = 0
   ),
   IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Green&quot;, 20, 20),
   IF(
      AND(
         ISPICKVAL(Project_Status__c, &apos;Active&apos;),
         Open_Milestone__c = 0,
         Overdue_Milestone__c  = 0
      ),
      IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;Yellow&quot;, 20, 20),
      IF(
         AND(
            OR(
               ISPICKVAL(Project_Status__c, &apos;Active&apos;),
               ISPICKVAL(Project_Status__c, &apos;On-Hold&apos;)
            ),
            Overdue_Milestone__c  &gt; 0
         ),
         IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;, 20, 20),
         IF(
            OR(
               ISPICKVAL(Project_Status__c, &apos;Active&apos;),
               ISPICKVAL(Project_Status__c, &apos;On-Hold&apos;)
            ),
            IMAGE(&quot;/img/samples/flag_grey.gif&quot;, &quot;Grey&quot;, 20, 20),
            IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Green&quot;, 20, 20)
         )
      )
   )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Health Flag</label>
    <type>Text</type>
</CustomField>