ASC Prod BAckup/ASC Prod/force-app/main/default/objects/RD_Portfolio__c/fields/Project_NPV__c.field-meta.xml
<CustomField>
    <fullName>Project_NPV__c</fullName>
    <description>NPV of the project</description>
    <label>Project NPV ($M)</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>