ASC Prod BAckup/ASC Prod/force-app/main/default/objects/RD_Portfolio__c/fields/RD_Next_Action__c.field-meta.xml
<CustomField>
    <fullName>RD_Next_Action__c</fullName>
    <defaultValue>&apos;No Work Planned&apos;</defaultValue>
    <label>RD Next Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>