ASC Prod BAckup/ASC Prod/force-app/main/default/objects/RD_Portfolio__c/fields/RD_Project_Number__c.field-meta.xml
<CustomField>
    <fullName>RD_Project_Number__c</fullName>
    <displayFormat>RD{YY}{0000}</displayFormat>
    <label>RD Project Number</label>
    <type>AutoNumber</type>
</CustomField>