ASC Prod BAckup/ASC Prod/force-app/main/default/objects/RD_Portfolio__c/fields/Stages__c.field-meta.xml
<CustomField>
    <fullName>Stages__c</fullName>
    <label>Stages</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stage 0 - Idea</fullName>
                <default>true</default>
                <label>Stage 0 - Idea</label>
            </value>
            <value>
                <fullName>Stage 1 - Feasibility</fullName>
            </value>
            <value>
                <fullName>Stage 2 - Business Case</fullName>
            </value>
            <value>
                <fullName>Stage 3 - Development</fullName>
            </value>
            <value>
                <fullName>Stage 4 - Scale Up</fullName>
            </value>
            <value>
                <fullName>Stage 5 - Launch</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
                <isActive>false</isActive>
                <label>On Hold</label>
            </value>
            <value>
                <fullName>Terminated</fullName>
                <isActive>false</isActive>
                <label>Terminated</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>