ASC Prod BAckup/ASC Prod/force-app/main/default/objects/RD_Portfolio__c/fields/Target_Cost__c.field-meta.xml
<CustomField>
    <fullName>Target_Cost__c</fullName>
    <description>What is the target cost of the solution in cost per unit?</description>
    <label>Target Cost</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>