ASC Prod BAckup/ASC Prod/force-app/main/default/objects/RD_Portfolio__c/fields/Target_Launch__c.field-meta.xml
<CustomField>
    <fullName>Target_Launch__c</fullName>
    <description>Expected date of first commercial sale. Not sample or pilot quantities.</description>
    <label>Target Launch</label>
    <type>Date</type>
</CustomField>