ASC Prod BAckup/ASC Prod/force-app/main/default/objects/RD_Portfolio__c/fields/Target_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Target_Quantity__c</fullName>
    <description>What is the target quantity that will need to be produced per year within the first 2 years of launch?</description>
    <label>Target Quantity</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>