ASC Prod BAckup/ASC Prod/force-app/main/default/objects/RD_Portfolio__c/fields/Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure__c</fullName>
    <description>What unit of measure are we using for the project?</description>
    <label>Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>G - Grams</fullName>
            </value>
            <value>
                <fullName>KG - Kilograms</fullName>
            </value>
            <value>
                <fullName>MT - Metric Tons</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>