ASC Prod BAckup/ASC Prod/force-app/main/default/objects/RD_Portfolio__c/fields/X2024_Revenue_K__c.field-meta.xml
<CustomField>
    <fullName>X2024_Revenue_K__c</fullName>
    <label>2024 Revenue ($K)</label>
    <precision>7</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>