ASC Prod BAckup/ASC Prod/force-app/main/default/objects/RD_Portfolio__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project_Type__c</columns>
    <columns>Lead_Chemist__c</columns>
    <columns>Project_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>