ASC Prod BAckup/ASC Prod/force-app/main/default/objects/RD_Portfolio__c/listViews/Analytical_Development.listView-meta.xml
<ListView>
    <fullName>Analytical_Development</fullName>
    <columns>RD_Project_Number__c</columns>
    <columns>NAME</columns>
    <columns>Program__c</columns>
    <columns>Project_Description__c</columns>
    <columns>Customers__c</columns>
    <columns>Lead_Chemist__c</columns>
    <columns>Project_Type__c</columns>
    <columns>Project_Status__c</columns>
    <columns>Stages__c</columns>
    <columns>Next_Gate_Review__c</columns>
    <columns>X2024_Revenue_K__c</columns>
    <columns>X2025_Revenue_K__c</columns>
    <columns>X2026_Revenue_K__c</columns>
    <columns>X2027_Revenue_K__c</columns>
    <columns>X2029_Revenue_K__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project_Type__c</field>
        <operation>equals</operation>
        <value>,New Product,Application Development,Catalog,Product Improvement</value>
    </filters>
    <filters>
        <field>Project_Status__c</field>
        <operation>equals</operation>
        <value>Active,On-Hold</value>
    </filters>
    <filters>
        <field>Program__c</field>
        <operation>equals</operation>
        <value>Analytical Development</value>
    </filters>
    <label>Analytical Development</label>
</ListView>