ASC Prod BAckup/ASC Prod/force-app/main/default/objects/RD_Portfolio__c/listViews/AOP_Development_Review_v1.listView-meta.xml
<ListView>
    <fullName>AOP_Development_Review_v1</fullName>
    <columns>RD_Project_Number__c</columns>
    <columns>NAME</columns>
    <columns>Platform__c</columns>
    <columns>Customers__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Commercial_Lead__c</columns>
    <columns>Lead_Chemist__c</columns>
    <columns>Project_Type__c</columns>
    <columns>Stages__c</columns>
    <columns>Next_Gate_Review__c</columns>
    <columns>X2025_Revenue_K__c</columns>
    <columns>Plan_Status_RD__c</columns>
    <columns>Priority__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project_Status__c</field>
        <operation>equals</operation>
        <value>Active,On-Hold</value>
    </filters>
    <filters>
        <field>Priority__c</field>
        <operation>equals</operation>
        <value>A - High Priority</value>
    </filters>
    <filters>
        <field>Stages__c</field>
        <operation>notEqual</operation>
        <value>Stage 5 - Launch</value>
    </filters>
    <label>Top Development Projects Review</label>
</ListView>