ASC Prod BAckup/ASC Prod/force-app/main/default/objects/RD_Portfolio__c/listViews/E_ET_Platform_Review_v2.listView-meta.xml
<ListView>
    <fullName>E_ET_Platform_Review_v2</fullName>
    <columns>RD_Project_Number__c</columns>
    <columns>NAME</columns>
    <columns>Customers__c</columns>
    <columns>Lead_Chemist__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Commercial_Lead__c</columns>
    <columns>Project_Type__c</columns>
    <columns>Project_Status__c</columns>
    <columns>Stages__c</columns>
    <columns>Next_Gate_Review__c</columns>
    <columns>RD_Next_Action__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project_Type__c</field>
        <operation>equals</operation>
        <value>,New Product,Application Development,Catalog,Product Improvement</value>
    </filters>
    <filters>
        <field>Project_Status__c</field>
        <operation>equals</operation>
        <value>Active,On-Hold</value>
    </filters>
    <filters>
        <field>Platform__c</field>
        <operation>equals</operation>
        <value>Electronics &amp; Energy Transition</value>
    </filters>
    <label>E&amp;ET Platform Review v2</label>
</ListView>