ASC Prod BAckup/ASC Prod/force-app/main/default/objects/RD_Portfolio__c/listViews/Launched_Development_Programs.listView-meta.xml
<ListView>
    <fullName>Launched_Development_Programs</fullName>
    <columns>RD_Project_Number__c</columns>
    <columns>NAME</columns>
    <columns>Platform__c</columns>
    <columns>Customers__c</columns>
    <columns>Project_Type__c</columns>
    <columns>X2021_Revenue__c</columns>
    <columns>X2022_Revenue_K__c</columns>
    <columns>X2023_Revenue_K__c</columns>
    <columns>X2024_Revenue_K__c</columns>
    <columns>X2025_Revenue_K__c</columns>
    <columns>X2026_Revenue_K__c</columns>
    <columns>X2027_Revenue_K__c</columns>
    <columns>X2028_Revenue_K__c</columns>
    <columns>X2029_Revenue_K__c</columns>
    <columns>X2030_Revenue__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stages__c</field>
        <operation>equals</operation>
        <value>Stage 5 - Launch</value>
    </filters>
    <label>Launched Development Programs</label>
</ListView>