ASC Prod BAckup/ASC Prod/force-app/main/default/objects/RD_Portfolio__c/listViews/On_Hold_RD_Projects.listView-meta.xml
<ListView>
    <fullName>On_Hold_RD_Projects</fullName>
    <columns>NAME</columns>
    <columns>Project_Type__c</columns>
    <columns>Lead_Chemist__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project_Status__c</field>
        <operation>equals</operation>
        <value>On-Hold</value>
    </filters>
    <filters>
        <field>Project_Type__c</field>
        <operation>equals</operation>
        <value>New Product,Application Development,Catalog</value>
    </filters>
    <label>On-Hold RD Projects</label>
</ListView>